--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kalker Khobor</title>
+    <title>Agamir Khobor</title>
     <link rel="icon" href="img/logo.png" />
 
     <!-- tailwind css links -->
@@ -17,13 +17,13 @@
 
   <body class="mx-36">
     <!-- navigation bar  -->
-    <nav class="p-3 bg-gray-50 rounded border-gray-200">
+    <nav class="p-10  rounded border-gray-200">
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
         <a href="#" class="flex items-center">
           <span class="self-center text-xl font-semibold whitespace-nowrap"
-            ><span class="bg-blue-500 rounded p-2 text-white">Kalker</span>
+            ><span class="bg-blue-500 rounded p-2 text-white">Agamir</span>
             Khobor</span
           >
         </a>
@@ -56,7 +56,7 @@
             <li>
               <a
                 href="#"
-                class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0"
+                class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 text-xl"
                 aria-current="page"
                 >News</a
               >
@@ -64,7 +64,7 @@
             <li>
               <a
                 href="#"
-                class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0"
+                class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 text-xl"
                 >Blog</a
               >
             </li>
@@ -72,14 +72,15 @@
         </div>
       </div>
     </nav>
+    <hr>
 
+    <!-- 2nd nav bar category -->
 
+    <section  id="category-list" class="flex justify-between px-10">
+    </section>
 
-
-
-
-    
     <!-- js links for taiwind css -->
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+    <script src="js/category.js"></script>
   </body>
 </html>
