getting category id by clicking the category button

--- a/index.html
+++ b/index.html
@@ -82,5 +82,6 @@
     <!-- js links for taiwind css -->
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="js/category.js"></script>
+    <script src="js/news.js"></script>
   </body>
 </html>
