card item complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Agamir Khobor</title>
     <link rel="icon" href="img/logo.png" />
 
+    <script src="https://kit.fontawesome.com/075b9f12fc.js" crossorigin="anonymous"></script>
     <!-- tailwind css links -->
     <link
       rel="stylesheet"
@@ -15,9 +16,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="mx-36">
+  <body class="mx-36 bg-stone-300">
     <!-- navigation bar  -->
-    <nav class="p-10  rounded border-gray-200">
+    <nav class="p-10 rounded border-gray-200">
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
@@ -72,12 +73,15 @@
         </div>
       </div>
     </nav>
-    <hr>
+    <hr />
 
     <!-- 2nd nav bar category -->
 
-    <section  id="category-list" class="flex justify-between px-10">
-    </section>
+    <section id="category-list" class="flex justify-between px-10"></section>
+
+    <!-- card show according to category button clicked -->
+
+    <section id="card-item" class=""></section>
 
     <!-- js links for taiwind css -->
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
