card item id receive

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <!-- js links for taiwind css -->
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="js/category.js"></script>
+    <script src="js/card.item.js"></script>
     <script src="js/news.js"></script>
   </body>
 </html>
