news button click working

--- a/index.html
+++ b/index.html
@@ -79,14 +79,19 @@
 
     <section id="category-list" class="flex justify-between px-10"></section>
 
+    <!-- modal for news details  -->
+
+    <section id="news-details"></section>
+
     <!-- card show according to category button clicked -->
 
     <section id="card-item" class=""></section>
 
     <!-- js links for taiwind css -->
-    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
+    
     <script src="js/category.js"></script>
     <script src="js/card.item.js"></script>
     <script src="js/news.js"></script>
+    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   </body>
 </html>
