--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="mx-36 bg-stone-300">
+  <body class="sm:mx-36 bg-stone-300 mx-5">
     <!-- navigation bar  -->
     <nav class="p-10 rounded border-gray-200">
       <div
@@ -80,7 +80,7 @@
 
     <!-- 2nd nav bar category -->
 
-    <section id="category-list" class="flex justify-between px-10"></section>
+    <section id="category-list" class="flex justify-between sm:px-10 flex-wrap "></section>
 
     <!-- news item count -->
 
@@ -136,4 +136,8 @@
     <script src="js/news.js"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   </body>
+
+  <footer class="p-10 flex justify-center">
+    <p>Copyright 2021 Agamir Khobor</p>
+  </footer>
 </html>
