--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           >
             <li>
               <a
-                href="#"
+                href="index.html"
                 class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 text-xl"
                 aria-current="page"
                 >News</a
@@ -67,7 +67,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="blog.html"
                 class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 text-xl"
                 >Blog</a
               >
@@ -129,15 +129,17 @@
 
     <section id="card-item" class=""></section>
 
-    <!-- js links for taiwind css -->
 
+    <footer class="p-10 flex justify-center">
+      <p>Copyright 2021 Agamir Khobor</p>
+    </footer>
+    
+    <!-- js links for taiwind css -->
     <script src="js/category.js"></script>
     <script src="js/card.item.js"></script>
     <script src="js/news.js"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   </body>
 
-  <footer class="p-10 flex justify-center">
-    <p>Copyright 2021 Agamir Khobor</p>
-  </footer>
+
 </html>
