--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
-        <a href="#" class="flex items-center">
+        <a href="index.html" class="flex items-center">
           <span class="self-center text-xl font-semibold whitespace-nowrap"
             ><span class="bg-blue-500 rounded p-2 text-white">Agamir</span>
             Khobor</span
@@ -80,7 +80,10 @@
 
     <!-- 2nd nav bar category -->
 
-    <section id="category-list" class="flex justify-between sm:px-10 flex-wrap "></section>
+    <section
+      id="category-list"
+      class="flex justify-between sm:px-10 flex-wrap"
+    ></section>
 
     <!-- news item count -->
 
@@ -92,11 +95,14 @@
       >
       <div class="relative">
         <div
-          class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none "
+          class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
         ></div>
         <p
-          class="block p-7 pl-10  text-xl text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 mx-5"
-        ><span id="newsCount"></span> items found for category <span id="categoryName">All News</span></p>
+          class="block p-7 pl-10 text-xl text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 mx-5"
+        >
+          <span id="newsCount"></span> items found for category
+          <span id="categoryName">All News</span>
+        </p>
       </div>
     </form>
 
@@ -129,18 +135,14 @@
 
     <section id="card-item" class=""></section>
 
-
     <footer class="p-10 flex justify-center">
-      <p>Copyright 2021 Agamir Khobor</p>
+      <p><b>Copyright 2021 Agamir Khobor</b></p>
     </footer>
-    
+
     <!-- js links for taiwind css -->
     <script src="js/category.js"></script>
     <script src="js/card.item.js"></script>
     <script src="js/news.js"></script>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-    
   </body>
-
-
 </html>
