--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
-        <a href="#" class="flex items-center">
+        <a href="index.html" class="flex items-center">
           <span class="self-center text-xl font-semibold whitespace-nowrap"
             ><span class="bg-blue-500 rounded p-2 text-white">Agamir</span>
             Khobor</span
